Removed Swagger and updated with Scalar documentation
